# VieNeu-TTS

./: README.md  README.vi.md  README_PYPI.md  app_config.py  config.yaml  docker-compose.yml  gradio_app.py  gradio_app_xpu.py  main.py  output.txt  pyproject.toml  pyproject.toml.cpu  ruff.toml  server.py
.github/workflows/: cd.yml  ci.yml
apps/: gradio_main.py  gradio_xpu.py  inference_runner.py  model_manager.py  ui_builder.py  ui_shared.py  web_stream.py
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: cpp_backend.md
examples/: main.py  main_remote.py
finetune/: create_voices_json.py  finetune_VieNeu-TTS.ipynb  merge_lora.py  train.py
finetune/configs/: lora_config.py
finetune/data_scripts/: encode_data.py  filter_data.py  get_hf_sample.py
services/: __init__.py  tts_service.py
src/vieneu/: __init__.py  base.py  core_xpu.py  cpp.py  factory.py  fast.py  remote.py  serve.py  standard.py  turbo.py  utils.py  v3turbo.py  xpu.py
src/vieneu/_v3_turbo_engine/: onnx_runtime_lite.py
src/vieneu/vietnamese_processor/: __init__.py  data.py  numbers.py  pipeline.py  stages.py
src/vieneu/vietnamese_processor/data/: acronyms_builtin.csv  english_blacklist.txt  units.csv
src/vieneu_utils/: core_utils.py  normalize_text.py  onnx.py  phonemize_text.py
src/vieneu_utils/cleaner/: __init__.py  datestime.py  num2vi.py  numerical.py  symbols.py  text_norm.py
tests/: benchmark.py  test_audio_utils.py  test_base_utils.py  test_bilingual_phonemize.py  test_core_utils.py  test_cpp.py  test_engine.py  test_engine_remote.py  test_engine_standard.py  test_engine_turbo.py  test_engine_v3turbo.py  test_factory.py  test_normalization.py  test_normalize.py  test_num2vi_extended.py  test_optimizations.py  test_phonemize.py  test_remote_mock.py  test_sdk_extended.py  test_tts_classes.py  test_tts_mock.py
ui/: __init__.py  app_assets.py  app_handlers.py  app_layout.py  app_theme.py  multi_voice_utils.py
ui/assets/: header.html  multi_voice.js  styles.css
utils/: core_utils.py  phonemize_text.py
vieneu/: core.py
vieneu_tts/: vieneu_tts.py
vieneu_utils/: normalize_text.py  test_normalization.py
vieneu_utils/cleaner/: __init__.py  datestime.py  num2vi.py  numerical.py  text_norm.py
