[tool.uv]
index-strategy = "unsafe-best-match"
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project]
name = "VieNeu-TTS"
version = "0.1.0"
description = "Advanced on-device Vietnamese TTS with instant voice cloning"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "phonemizer>=3.3.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "neucodec>=0.0.4",
    "librosa>=0.11.0",
    "gradio>=5.49.1",
    "onnxruntime>=1.23.2",
    "datasets>=3.2.0",
    "llama-cpp-python==0.3.16",
    "perth>=0.2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

llama-cpp-python = [
    { url = "https://github.com/pnnbao97/VieNeu-TTS/releases/download/wheels-v0.3.16/llama_cpp_python-0.3.16-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
    { index = "pypi", marker = "sys_platform != 'win32'" }
]
