[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-strategy = "unsafe-best-match"
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
override-dependencies = [
    "nvidia-nccl-cu12; sys_platform == 'linux'",
]
default-groups = ["gpu"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "llama-cpp-metal"
url = "https://abetlen.github.io/llama-cpp-python/whl/metal/"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-win-cpu"
url = "https://pnnbao97.github.io/llama-cpp-python-v0.3.16/cpu/"
explicit = true

[project]
name = "vieneu"
version = "1.2.6"
description = "Advanced on-device Vietnamese TTS with instant voice cloning"
readme = "README_PYPI.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
keywords = [
    "text-to-speech",
    "tts",
    "vietnamese",
    "voice-cloning",
    "speech-synthesis",
    "real-time",
    "on-device"
]
authors = [
    { name = "Phạm Nguyễn Ngọc Bảo", email = "pnnbao@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "phonemizer>=3.3.0",
    "neucodec>=0.0.4",
    "librosa>=0.11.0",
    "gradio>=5.49.1",
    "onnxruntime>=1.23.2",
    "datasets>=3.2.0",
    "torch",
    "torchaudio",
    "perth>=0.2.0",
    "llama-cpp-python==0.3.16",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/pnnbao97/VieNeu-TTS"
"Repository" = "https://github.com/pnnbao97/VieNeu-TTS"
"Bug Tracker" = "https://github.com/pnnbao97/VieNeu-TTS/issues"
"Documentation" = "https://github.com/pnnbao97/VieNeu-TTS/blob/main/README.md"
"Source Code" = "https://github.com/pnnbao97/VieNeu-TTS"
"Changelog" = "https://github.com/pnnbao97/VieNeu-TTS/releases"

[project.optional-dependencies]
gpu = [
    "lmdeploy; sys_platform != 'darwin'",
    "triton-windows; sys_platform == 'win32'",
    "triton; sys_platform == 'linux'",
    "transformers; sys_platform == 'darwin'",
    "accelerate; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
gpu = [
    "lmdeploy; sys_platform != 'darwin'",
    "triton-windows; sys_platform == 'win32'",
    "triton; sys_platform == 'linux'",
    "transformers; sys_platform == 'darwin'",
    "accelerate; sys_platform == 'darwin'",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable all `E` codes by default.
# See https://docs.astral.sh/ruff/rules/ for more information.
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "E701", "E741", "F401", "F841"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code examples in
# docstrings.
#
# This field is only used if `docstring-code-format` is enabled.
docstring-code-line-length = "dynamic"

[project.scripts]
vieneu-web = "apps.gradio_main:main"
vieneu-stream = "apps.web_stream:main"

[tool.setuptools]
package-dir = {"" = "src", "apps" = "apps", "examples" = "examples"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["vieneu*", "vieneu_utils*", "apps*", "examples*"]

[tool.setuptools.package-data]
vieneu_utils = ["phone_dict/*.db"]
vieneu = ["assets/samples/*"]

[tool.uv.sources]

torch = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" }
]

torchaudio = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" }
]

lmdeploy = [
    { url = "https://github.com/InternLM/lmdeploy/releases/download/v0.11.0/lmdeploy-0.11.0+cu128-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
    { url = "https://github.com/InternLM/lmdeploy/releases/download/v0.11.0/lmdeploy-0.11.0+cu128-cp312-cp312-manylinux2014_x86_64.whl", marker = "sys_platform == 'linux' and python_version == '3.12'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" }
]

llama-cpp-python = [
    { index = "llama-cpp-win-cpu", marker = "sys_platform == 'win32'" },
    { index = "llama-cpp-metal", marker = "sys_platform == 'darwin'" },
    { index = "pypi", marker = "sys_platform != 'win32' and sys_platform != 'darwin'" }
]
